<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_background_color"
        app:layout_constraintHeight_percent="0.25"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:textAppearance="@style/Text.Primary.LabelLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_normal"
            >

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_photo"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            app:cardCornerRadius="@dimen/main_avatar_radius"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAddContact"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar"
                />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_photo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintBottom_toBottomOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameContainer"
            style="@style/TextInputEditLayout.addContact"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/careerContainer"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameField"
                style="@style/TextInputEditText.contactText"
                android:background="@color/secondary_background_color"
                android:hint="@string/userName"
                android:inputType="textEmailAddress"
                tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/careerContainer"
            style="@style/TextInputEditLayout.addContact"
            android:layout_marginHorizontal="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/userNameContainer"
            app:layout_constraintBottom_toTopOf="@id/eMailContainer"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/careerField"
                style="@style/TextInputEditText.contactText"
                android:background="@color/secondary_background_color"
                android:hint="@string/career"
                tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eMailContainer"
            style="@style/TextInputEditLayout.addContact"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/careerContainer"
            app:layout_constraintBottom_toTopOf="@id/phoneContainer"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eMailField"
                style="@style/TextInputEditText.contactText"
                android:background="@color/secondary_background_color"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainer"
            style="@style/TextInputEditLayout.addContact"
            android:layout_marginHorizontal="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/eMailContainer"
            app:layout_constraintBottom_toTopOf="@id/addressContainer"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneField"
                style="@style/TextInputEditText.contactText"
                android:background="@color/secondary_background_color"
                android:hint="@string/phone"
                tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressContainer"
            style="@style/TextInputEditLayout.addContact"
            android:layout_marginHorizontal="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/phoneContainer"
            app:layout_constraintBottom_toTopOf="@id/birthContainer"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressField"
                style="@style/TextInputEditText.contactText"
                android:background="@color/secondary_background_color"
                android:hint="@string/address"
                android:lines="2"
                tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthContainer"
            style="@style/TextInputEditLayout.addContact"
            android:layout_marginHorizontal="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/addressContainer"
            app:layout_constraintBottom_toTopOf="@id/buttonAddContact"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthField"
                style="@style/TextInputEditText.contactText"
                android:background="@color/secondary_background_color"
                android:hint="@string/birthDate"
                tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddContact"
            style="@style/button_basic"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/button_basic"
            android:text="@string/addContact"
            android:textAppearance="@style/Text.Primary.ButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TextSizeCheck,UsingOnClickInXml,VisualLintButtonSize" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>